version 3.3.3 	2019/09/16
- bitrate from metadata if missing in Format Context
- changed exit code to work with errorlevel (win)
- fixed processing movies with PTS larger than duration
- fixed processing h264 with B frames

version 3.3.2 	2019/05/30
- macOS support (homebrew)

version 3.3.1 	2019/02/19
- improoved searching for video source in case the first video source is cover art
- minor changes to remove compilation warnings

version 3.3 	2018/05/16
- Added PNG image format
- Added --shadow switch to draw shadows beneath thumbnails
- Added --transparent switch to set background color as transparent
- Added -q switch to enable quiet mode (overrides -v)
- verbose mode prints MTN, GD and FFmpeg's version to output

version 3.2.1 	2018/01/02
- fixed final cleaning memory crashing on windows

version 3.2 	2017/12/05
- add -H option to disable filesize in bytes in media info

version 3.1 	2017/11/23
- propose new image size in case of too small thumbnails
- file size only in human readable format
- fixed blank lines between media info and additional title
- fixed freezing after reading file error

version 3.0 	2017/08/07
- removed old and deprecated piece of code and replaced with new FFmpeg's (3.1.8) API
- add -X option to include video extension in output filename
- add -S option to select video stream
- add -d option to set recursion depth
- return code -1 on failure

version 200808a
- release year and month is now used as the version number.
- fix aspect ratio bugs. mtn now should behave the same as vlc's snapshot.
- bug: the Video: lines in stderr no longer show input scaling info ( => WxH).
  scaling info is still shown in the final output image and the info text file.
  this cannot be fixed easily.
- add -a aspect_ratio option to override input file's display aspect ratio.
- add non-seek mode -- slower but more accurate timing.
  non-seek is good for small time step or small clips.
- seek or non-seek mode is auto selected and can be overridden by -z or -Z.